ilc/deployment/app/overlays/staging/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: true
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~ robots.txt {
        add_header  Content-Type  text/plain;
        return 200 "User-agent: *\nDisallow: /\n";
      }
spec:
  tls:
    - hosts:
        - craklabel.staging.jmclcom.com
      secretName: jmclcom-tls
  rules:
    - host: craklabel.staging.jmclcom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
